--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-bin/testReadFile
-bin/plotPAFile
-build/CMakeCache.txt
-build/CMakeFiles/
-build/G__PHA.cxx
-build/Makefile
-build/cmake_install.cmake
-build/libPHA.rootmap
-build/libPHA_rdict.pcm
-build/libPhotoAna.so
+bin/
+build/
+data/
