--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 project(PhotonAnalysis)
 
 list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
 set(CMAKE_MODULE_PATH $ENV{ROOTSYS}/etc/cmake)
+set(CMAKE_CXX_STANDARD 17)
 find_package(ROOT REQUIRED COMPONENTS MathCore RIO Hist Tree Net)
+find_package(Boost 1.61 COMPONENTS program_options REQUIRED)
+find_package(fmt)
 
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/include ${ROOT_INCLUDE_DIRS})
 add_definitions(${ROOT_CXX_FLAGS})
@@ -25,7 +28,7 @@ set(HEADERS
 
 ROOT_GENERATE_DICTIONARY(G__PHA ${HEADERS} LINKDEF include/LinkDef.h)
 add_library(PhotoAna SHARED ${SRCS} G__PHA)
-target_link_libraries(PhotoAna ${ROOT_LIBRARIES}) 
+target_link_libraries(PhotoAna ${ROOT_LIBRARIES} Boost::program_options fmt::fmt)
 
 # Create main programs using the library
 
@@ -35,6 +38,8 @@ set(EXE_SRCS
    macros/testReadFile.C
    macros/plotMultiPAFilesStandard.C
    macros/plotSpecific.C
+   macros/plotFromCSV.C
+   macros/plotFromJson.C
    )
 
 set(EXE_NAMES
@@ -43,6 +48,8 @@ set(EXE_NAMES
    testReadFile
    plotMultiPAFilesStandard
    plotSpecific
+   plotFromCSV
+   plotFromJson
    )
 
 list(LENGTH EXE_SRCS count)
